# glimpse

./: .gitignore  AGENTS.md  CONTEXT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
docs/adr/: 0001-send-only-selected-database-metadata-to-model.md  0002-v0-1-requires-real-database-metadata-connections.md  0003-v0-1-includes-auto-table-discovery.md  0004-send-full-database-catalog-to-model-for-auto-table-discovery.md  0005-limit-v0-1-catalog-scope-to-one-default-database-schema.md  0006-v0-1-includes-read-only-sql-execution.md  0007-block-write-sql-but-do-not-force-query-scale-limits.md  0008-require-manual-execution-for-ai-generated-sql.md  0009-use-global-ai-configuration-in-v0-1.md  0010-persist-sql-and-ai-conversation-history-locally.md  0011-organize-sql-work-by-query-session.md  0012-do-not-persist-query-result-sets-in-v0-1.md  0013-send-sql-errors-to-model-for-repair.md  0014-defer-sql-explanation-after-v0-1.md  0015-use-sqlite-and-macos-keychain-for-local-storage.md  0016-keep-v0-1-local-only-with-no-glimpse-cloud-account.md  0017-use-sql-editor-first-layout.md  0018-use-tauri-react-rust-codemirror-stack.md  0019-use-workbench-layout-as-v0-1-ui-baseline.md  (+15 more)
src/: App.test.tsx  App.tsx  aiProviderTestClient.test.ts  aiProviderTestClient.ts  candidateTableDiscovery.test.ts  candidateTableDiscovery.ts  sqlExecution.test.ts  sqlExecution.ts  sqlGeneration.test.ts  sqlGeneration.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+13 files in other folders)
