[package]
name = "glimpse"
version = "0.1.0"
description = "Glimpse desktop app"
authors = ["Glimpse"]
edition = "2021"

[lib]
name = "glimpse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
mysql = "25"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
